--- a/BookStore/BookStore/BookStore.csproj
+++ b/BookStore/BookStore/BookStore.csproj
@@ -1,7 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
+  <PropertyGroup>    
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
